# bb-osx

./: .gitignore  CMakeLists.txt  README.md  configure  messager.c
include/: config.h
src/: bb.c  main.c  textform.c
